# sumerian_translation

./: .gitattributes  .gitignore  .nfs46a3f32ecd2cee70004f96a5  ARCHITECTURE.md  AUDIT_REPORT.md  CLAUDE.md  REPRODUCIBILITY.md  RUNBOOK.md  TRAINING_STRATEGY.md  academic_report.md  augment_with_paraphrasing.py  augmentation_analysis.py  compare_models.py  config.py  convert_tokenizer.py  evaluate_academic.py  losses.py  pyproject.toml  requirements.txt  run_ablation.py  test_ddp_minimal.py  test_inference.py  test_mlm_minimal.py  train.py  train_mlm.py  train_mt5.py  train_mt5_ddp.py  train_mt5_ddp_continued.py  train_nmt.py  train_nmt_v2.py  train_nmt_v3.py  translate.py  unwrap_model.py
common/: __init__.py  data_loader.py  io.py  metrics.py  parallel.py  quality.py  text.py  training.py
configs/: llama3_sft.yaml
configs_llm/: deepspeed_zero3.json  llama3_dpo.yaml  llama3_sft.yaml
data/archive/: stats.json
data/consolidated/: glossary_sux.parquet  metadata.json  oracc_literary.parquet  oracc_royal.parquet
data/oracc/epsd2-literary/epsd2/literary/: catalogue.json  corpus.json  epsd2-literary-portal.json  gloss-sux-x-emesal.json  gloss-sux.json  index-cat.json  index-lem.json  index-qpn.json  index-sux-x-emesal.json  index-tra.json  metadata.json  sortcodes.json
data/oracc/epsd2-literary/epsd2/literary/corpusjson/: P209784.json  P223477.json  P251427.json  P251713.json  P251728.json  P252215.json  P252238.json  P252242.json  P252255.json  P252270.json  P252288.json  P252292.json  P252296.json  P252311.json  P252331.json  P252333.json  P254171.json  P254175.json  P254855.json  P254856.json  P254857.json  P254858.json  P254859.json  P254860.json  P254861.json  P254862.json  P254863.json  P254864.json  P254865.json  P254866.json  P254867.json  P254868.json  P254869.json  P254870.json  P254871.json  P254872.json  P254873.json  P254874.json  P254875.json  P254876.json  (+867 more)
data/oracc/epsd2-royal/epsd2/royal/: catalogue.json  corpus.json  gloss-sux-x-emesal.json  gloss-sux.json  index-cat.json  index-sux-x-emesal.json  index-tra.json  metadata.json  sortcodes.json
data/oracc/epsd2-royal/epsd2/royal/corpusjson/: P453401.json  P524806.json  Q000376.json  Q000613.json  Q000834.json  Q000835.json  Q000836.json  Q000842.json  Q000844.json  Q000871.json  Q000872.json  Q000873.json  Q000874.json  Q000875.json  Q000876.json  Q000877.json  Q000879.json  Q000881.json  Q000882.json  Q000883.json  Q000884.json  Q000885.json  Q000886.json  Q000887.json  Q000888.json  Q000889.json  Q000890.json  Q000891.json  Q000892.json  Q000893.json  Q000894.json  Q000895.json  Q000896.json  Q000897.json  Q000898.json  Q000899.json  Q000900.json  Q000901.json  Q000902.json  Q000903.json  (+1840 more)
etcsl_extractor/: config.py  main.py
etcsl_extractor/exporters/: annotation_exporter.py  metadata_exporter.py  parallel_corpus_exporter.py  text_generator.py
etcsl_extractor/ota_20/: etcsl
etcsl_extractor/parsers/: preprocessor.py  translation_parser.py  transliteration_parser.py
etcsl_extractor/processors/: parallel_aligner.py
etcsl_extractor/utils/: xml_utils.py
evaluation/: __init__.py  compare_models.py  evaluate_llm.py  vllm_inference.py
legacy_mt5/: evaluate_academic.py
models/sumerian_mt5_continued/: config.json  generation_config.json  model.safetensors  special_tokens_map.json  tokenizer_config.json  training_history.json
models/sumerian_mt5_ddp/: config.json  model.safetensors  tokenizer.json
models/sumerian_tiny_mlm/checkpoint-39000/: model.safetensors  scaler.pt  tokenizer_config.json  trainer_state.json
models/sumerian_tiny_mlm/checkpoint-39450/: config.json  model.safetensors  scaler.pt  special_tokens_map.json  tokenizer.json  trainer_state.json
output/: oracc_literary_synthetic.stats.json  oracc_royal_synthetic.jsonl  oracc_royal_synthetic.stats.json
output_training_v2_clean/finetune/: train_augmented_v2.jsonl  train_data.pkl  valid.jsonl  valid_data.pkl
output_training_v2_clean/finetune/train_tokenized/: data-00000-of-00001.arrow  state.json
output_training_v2_clean/finetune/valid_tokenized/: data-00000-of-00001.arrow  state.json
output_training_v2_clean/pretrain/: corpus_monolingual.txt
output_training_v2_clean/tokenizer_hf/: tokenizer.json  tokenizer_config.json
processors/: clean_corpus.py  consolidate_for_llm.py  consolidate_to_parquet.py  create_dpo_pairs.py  entity_linker.py  gloss_augmentor.py  graph_augmentor.py  normalization_bridge.py  oracc_core.py  oracc_extractor.py  oracc_gloss_extractor.py  prepare_training_data.py  quality_gate.py
processors/graph_engine/: __init__.py  builder.py  matcher.py  safety.py  swapper.py
scripts/: 00_setup.sh  01_extract_corpus.sh  03_augment.sh  run_all.sh
src/sumerian_nmt/: __init__.py  config.py
src/sumerian_nmt/baselines/: __init__.py
src/sumerian_nmt/data_ingestion/: __init__.py  corpus_config.py  extractor.py  oracc_core.py
src/sumerian_nmt/data_ingestion/exporters/: __init__.py  parallel_corpus_exporter.py  text_generator.py
src/sumerian_nmt/data_ingestion/parsers/: __init__.py  preprocessor.py  translation_parser.py  transliteration_parser.py
src/sumerian_nmt/data_ingestion/processors/: __init__.py  parallel_aligner.py
src/sumerian_nmt/data_ingestion/utils/: __init__.py
src/sumerian_nmt/data_processing/: __init__.py  alpaca_formatter.py  dpo_generator.py  normalization.py  parquet_consolidator.py  splitter.py
src/sumerian_nmt/evaluation/: __init__.py  error_analysis.py  llm_evaluator.py  model_comparison.py  significance_test.py  vllm_inference.py
src/sumerian_nmt/graph_augmentation/: __init__.py  constraints.py  entity_graph.py  entity_linker.py  pipeline.py  structural_matcher.py  substitution.py
src/sumerian_nmt/utils/: __init__.py  hardware.py  io.py  text.py  validation.py
